tests/NormalTests/paczka1/small_fuzzy/73438548.err
Error in line 1: fpuBacCjEE3 S911 29,0
Error in line 7: 6DY8MkxxNs A248 55,5
Error in line 11: 6DY8MkxxNs A898 39,6
